--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<h1>Help</h1>
+<p><p>This is the help page for the 
+	<a href="htpp://railstutuorial.org/">Ruby on Rails Tutorial</a>
+	sample application.
+</p>
+</p>
