Page titles added

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,6 +1,13 @@
-<h1>Help</h1>
-<p><p>This is the help page for the 
-	<a href="htpp://railstutuorial.org/">Ruby on Rails Tutorial</a>
-	sample application.
-</p>
-</p>
+<DOCTYPE html>
+	<html>
+		<head>
+			<title>Ruby on Rails Tutorial Sample App | Help</title>
+		</head>
+		<body>
+			<h1>Help</h1>
+			<p>This is the help page for the 
+				<a href="htpp://railstutuorial.org/">Ruby on Rails Tutorial</a>
+				sample application.
+			</p>
+		</body>
+	</html>
