--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,13 +1,6 @@
-<DOCTYPE html>
-	<html>
-		<head>
-			<title>Ruby on Rails Tutorial Sample App | Help</title>
-		</head>
-		<body>
-			<h1>Help</h1>
-			<p>This is the help page for the 
-				<a href="htpp://railstutuorial.org/">Ruby on Rails Tutorial</a>
-				sample application.
-			</p>
-		</body>
-	</html>
+<% provide(:title, 'Help') %>
+<h1>Help</h1>
+	<p>This is the help page for the 
+		<a href="htpp://railstutuorial.org/">Ruby on Rails Tutorial</a> sample application.
+		To get help on this sample app, see the <a href="http://railstutorial.org/book">Rails Tutorial book</a>
+	</p>
